# multi-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  eval.py  main.py  pyproject.toml  pyrightconfig.json  skill.md
agent/: __init__.py  background.py  compact.py  issue_investigator.py  loop.py  orchestrator.py  permission.py  planner.py  router.py  skill.py  state.py  subagent.py  task_manager.py  team.py  team_orchestrator.py  worktree.py
model/: __init__.py  _stream.py  base.py  config.py  ollama.py  openai_model.py  vllm.py
skills/codebase-onboard/: SKILL.md
skills/debug-issue/: SKILL.md
skills/example/: SKILL.md
skills/issue-investigation/: SKILL.md
skills/parallel-work/: SKILL.md
skills/refactor-safely/: SKILL.md
skills/search-iteration/: SKILL.md
tmp/: cluster_issues.py
tools/: __init__.py  definitions.py  handlers.py  registry.py
tools/api/: __init__.py  bitbucket.py  config.py  confluence.py  jira.py
utils/: __init__.py  console.py  error_log.py  messages.py  repl.py  shell.py
