[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent system: ollama orchestrator (s01–s06) + vllm subagent"
requires-python = ">=3.13.0"
dependencies = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["model", "agent", "tools", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
